--- a/css/general.css
+++ b/css/general.css
@@ -9,6 +9,8 @@
 
 header{
     background-color: black;
+    background-image: url("../img/jhonson.png");
+    background-repeat:no-repeat;
     position: static;
 }
 
@@ -48,7 +50,7 @@ header{
 /*body*/
 
 body{
-    background-color: rgb(131, 131, 131);
+    background-color: white;
 }
 
 .imagendwayne{
