--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@
 
 header{
     background-color: black;
+    background-image: url("../img/jhonson.png");
+    background-repeat:no-repeat;
     position: sticky;   
     /*background-image: url("../img/jhonson.png");*/
     
@@ -49,7 +51,7 @@ header{
 /*body*/
 
 body{
-    background-color:rgb(131, 131, 131);
+    background-color:white;
 }
 
 .fotodwayne{
